--- a/app-covid19-indonesian/build.gradle
+++ b/app-covid19-indonesian/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation project(":utils")
 }
