--- a/app-covid19-indonesian/build.gradle
+++ b/app-covid19-indonesian/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(":utils")
+    implementation project(":api-data")
 }
