--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -7,6 +7,7 @@ android {
 
 
     defaultConfig {
+        buildConfigField("String", "URL", "\"https://api.kawalcorona.com/\"")
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 1
@@ -27,4 +28,9 @@ android {
 
 dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation project(":api-data")
 }
